--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
     <failIfNoTests>false</failIfNoTests>
     <forkCount>1</forkCount>
     <jdk.version.minimum>8</jdk.version.minimum>
-    <jetty.git.repo>jetty.toolchain</jetty.git.repo>
+    <jetty.git.repo>jetty-parent-pom</jetty.git.repo>
     <jetty.url>http://www.eclipse.org/jetty</jetty.url>
     <!-- classpath resource coming from jetty-header-templates artifact -->
     <license.header.resource>jetty-header-epl2.0-apache2.0-template.txt</license.header.resource>
